<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorites">Favorites</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="save">Save</string>
    <string name="channel_id">default_fcm_channel</string>
    <string name="channel_name">notif_movie</string>
    <string name="get_notifications">Get Notifications</string>
</resources>
