<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.moviecatalogue.ui.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie">
        <action
            android:id="@+id/action_navigation_movie_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_movie_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.example.moviecatalogue.ui.tvshow.TvShowFragment"
        android:label="@string/tv_show"
        tools:layout="@layout/fragment_tv_show">
        <action
            android:id="@+id/action_navigation_tv_show_to_detailTvShowFragment"
            app:destination="@id/detailTvShowFragment" />
        <action
            android:id="@+id/action_navigation_tv_show_to_searchTvShowFragment"
            app:destination="@id/searchTvShowFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.moviecatalogue.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.moviecatalogue.ui.detail.DetailFragment"
        android:label="{title}"
        tools:layout="@layout/detail_fragment">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.moviecatalogue.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/search_fragment">
        <argument
            android:name="query"
            app:argType="string" />
        <action
            android:id="@+id/action_searchFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_searchFragment_self"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailTvShowFragment"
        android:name="com.example.moviecatalogue.ui.detailtvshow.DetailTvShowFragment"
        android:label="{title}"
        tools:layout="@layout/detail_tv_show_fragment">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/searchTvShowFragment"
        android:name="com.example.moviecatalogue.ui.searchtv.SearchTvShowFragment"
        android:label="Search Tv Show"
        tools:layout="@layout/search_tv_show_fragment">
        <argument
            android:name="query"
            app:argType="string" />
        <action
            android:id="@+id/action_searchTvShowFragment_to_detailTvShowFragment"
            app:destination="@id/detailTvShowFragment" />
        <action
            android:id="@+id/action_searchTvShowFragment_self"
            app:destination="@id/searchTvShowFragment" />
    </fragment>
</navigation>
